--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,40 @@
-pdfrw>=0.4
-defusedxml
+asn1crypto==0.24.0
+autopep8==1.4.3
+awscli==1.16.157
+beautifulsoup4==4.7.1
+boto3==1.9.33
+botocore==1.12.147
+certifi==2018.10.15
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+colorama==0.3.9
+cryptography==2.3.1
+docutils==0.14
+entrypoints==0.3
+flake8==3.7.7
+idna==2.7
+jmespath==0.9.3
+mccabe==0.6.1
+pbr==5.0.0
+pep8==1.7.1
+pyasn1==0.4.5
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
+PyMySQL==0.9.2
+python-dateutil==2.7.5
+python-dotenv==0.9.1
+PyYAML==3.13
+rebound-cli==2.0.0
+requests==2.20.0
+rsa==3.4.2
+s3transfer==0.2.0
+six==1.11.0
+soupsieve==1.9.1
+stevedore==1.29.0
+urllib3==1.24
+urwid==2.0.1
+virtualenv==16.0.0
+virtualenv-clone==0.4.0
+virtualenvwrapper==4.8.2
