Redaction working on blocks with sentence splitting

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,4 @@
-asn1crypto
-autopep8
-awscli
-beautifulsoup4
-boto3
-botocore
-certifi
-cffi
-chardet
-Click
-colorama
-cryptography
-docutils
-entrypoints
-flake8
-idna
-jmespath
-mccabe
-pbr
-pep8
-pyasn1
-pycodestyle
-pycparser
-pyflakes
-PyMySQL
-python-dateutil
-python-dotenv
-PyYAML
-rebound-cli
-requests
-rsa
-s3transfer
-six
-soupsieve
-stevedore
-urllib3
-urwid
-virtualenv
-virtualenv-clone
-virtualenvwrapper
+Click~=7.1.2
+
+setuptools~=53.0.0
+pdfrw~=0.4
